--- a/moveVis/add_timestamps.Rmd
+++ b/moveVis/add_timestamps.Rmd
@@ -1,25 +1,34 @@
-add_timestamps Add timestamps to frames
+---
+title: "``add_timestamps``:  Add timestamps to frames"
+output: html_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(moveVis)
+```
+
 #### Description
-This function adds timestamps to animation frames created with frames_spatial.
-Usage
+This function adds timestamps to animation frames created with ``frames_spatial``.
+
+#### Usage
+<pre><code>
 add_timestamps(frames, m, x = NULL, y = NULL, ..., verbose = TRUE)
+</code></pre>
+
 #### Arguments 
-frames list of ggplot2 objects, crated with frames_spatial.
-m move or moveStack used to create frames with frames_spatial of uniform
-time scale and time lag, e.g. prepared with align_move.
-x numeric, optioanl, position of timestamps on the x scale. By default, timestamps
+
+* frames list of ggplot2 objects, crated with frames_spatial.
+* m move or moveStack used to create frames with frames_spatial of uniform
+* time scale and time lag, e.g. prepared with align_move.
+* x numeric, optioanl, position of timestamps on the x scale. By default, timestamps
 will be displayed in the top center.
-y numeric, optioanl, position of timestamps on the y scale.
-... optional, #### Arguments  passed to add_text, such as colour, size, type.
-verbose logical, if TRUE, messages on the function’s progress are displayed (default).
-Value
-List of frames.
-Author(s)
-Jakob Schwalb-Willmann
-See Also
-frames_spatial frames_graph animate_frames
-16 align_move
+* y numeric, optioanl, position of timestamps on the y scale.
+* ... optional, arguments  passed to add_text, such as colour, size, type.
+* verbose logical, if TRUE, messages on the function’s progress are displayed (default).
+
 #### Examples
+```{r}
 library(moveVis)
 library(move)
 data("move_data", "basemap_data")
@@ -35,3 +44,12 @@ frames.a[[100]]
 # or use the ggplot2 "label" type:
 frames.b <- add_timestamps(frames, m, type = "label")
 frames.b[[100]]
+```
+
+Value
+List of frames.
+Author(s)
+Jakob Schwalb-Willmann
+See Also
+frames_spatial frames_graph animate_frames
+16 align_move
