--- a/timevis/setItems.Rmd
+++ b/timevis/setItems.Rmd
@@ -1,4 +1,14 @@
-setItems Set the items of a timeline
+---
+title: "``setItems``: Set the items of a timeline"
+output: html_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(timeVis)
+```
+
+
 ### ### Description
 Set the items of a timeline
 ### Usage
