--- a/timevis/setSelection.Rmd
+++ b/timevis/setSelection.Rmd
@@ -1,4 +1,12 @@
-setSelection 13
+---
+title: "``add_scalebar``: Add scalebar to frames"
+output: html_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(timeVis)
+```
 setSelection Select one or multiple items on a timeline
 ### ### Description
 Select one or multiple items on a timeline
