--- a/timevis/removeItem.Rmd
+++ b/timevis/removeItem.Rmd
@@ -1,3 +1,14 @@
+---
+title: "``add_scalebar``: Add scalebar to frames"
+output: html_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(timeVis)
+```
+
+
 removeItem Remove an item from a timeline
 ### ### Description
 Remove an item from a timeline
