--- a/cvTools/cvFit.Rmd
+++ b/cvTools/cvFit.Rmd
@@ -1,4 +1,14 @@
-cvFit 11
+---
+title: "``add_scalebar``: Add scalebar to frames"
+output: html_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(cvTools)
+```
+
+
 cvFit Cross-validation for model evaluation
 
 #### Description 
