--- a/DataVisualizations/Classplot.Rmd
+++ b/DataVisualizations/Classplot.Rmd
@@ -4,30 +4,34 @@ Allows to plot one time series or feauture with a classification as a labeled sc
 The colors are the labels defined by the classification. Usefull to see if temporal clustering has time
 dependent variations and for Hidden Markov Models (see Mthrun/RHmm on GitHub).
 #### Usage
+<pre><code>
 Classplot(X, Y, Cls,
 xlab = "X", ylab = "Y",
 main = "Class Plot", Colors,
 LineColor = "grey", LineWidth = 1, LineType = NULL,
 Showgrid = TRUE, SaveIt = FALSE)
+</code></pre>
+
 #### Arguments
-X [1:n] numeric vector or time
-Y [1:n] numeric vector of feature
-Cls [1:n] numeric vector of k classes
-xlab Optional, string
-ylab Optional, string
-main Optional, string
-Colors Optional, string
-LineColor Optional, name of color
-LineWidth Optional, number
-LineType Optional, string
-Showgrid Optional, boolean
-SaveIt Optional, boolean
-Value
+
+* X [1:n] numeric vector or time
+* Y [1:n] numeric vector of feature
+* Cls [1:n] numeric vector of k classes
+* xlab Optional, string
+* ylab Optional, string
+* main Optional, string
+* Colors Optional, string
+* LineColor Optional, name of color
+* LineWidth Optional, number
+* LineType Optional, string
+* Showgrid Optional, boolean
+* SaveIt Optional, boolean
+
+#### Value
 plotly object
-Author(s)
+
+#### Author(s)
 Michael Thrun
-18 Crosstable
+
 See Also
 DualaxisClassplot
-Examples
-##ToDo
