--- a/DataVisualizations/InspectBoxplots.Rmd
+++ b/DataVisualizations/InspectBoxplots.Rmd
@@ -1,18 +1,28 @@
 InspectBoxplots Enables to Insptecd the Boxplots for Multiple variables
+
 #### Description
-This function creates a boxplot for each variable of the data matrix. Each boxplot also has a point
-for the mean of the variable.
+
+This function creates a boxplot for each variable of the data matrix. Each boxplot also has a point for the mean of the variable.
+
 #### Usage
+<pre><code>
 InspectBoxplots(Data, Names,Means=TRUE)
+</code></pre>
+
 #### Arguments
-Data Matrix containing the data. Each column is one variable.
-Names Optional: Names of the variables. If missing the columnnames of data are used.
-Means Optional: TRUE: with mean, FALSE: Only median.
-Value
+* Data Matrix containing the data. Each column is one variable.
+* Names Optional: Names of the variables. If missing the columnnames of data are used.
+* Means Optional: TRUE: with mean, FALSE: Only median.
+
+#### Value
 The ggplot object of the boxplots
-Author(s)
+
+#### Author(s)
 Felix Pape
-Examples
+
+#### Examples
+
+```{r}
 x <- cbind(A = rnorm(200, 1, 3), B = rnorm(100, -2, 5))
 InspectBoxplots(x)
-28 InspectDistances
+```
