--- a/DataVisualizations/QQplot.Rmd
+++ b/DataVisualizations/QQplot.Rmd
@@ -1,3 +1,14 @@
+---
+title: "``DataVisualizations::``"
+output: html_document
+---
+
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(DataVisualizations)
+```
 QQplot QQplot with a Linear Fit
 #### Description
 Qantile-quantile plot with a linear fit
