--- a/DataVisualizations/InspectDistances.Rmd
+++ b/DataVisualizations/InspectDistances.Rmd
@@ -1,3 +1,14 @@
+---
+title: "``DataVisualizations::InspectDistances``"
+output: html_document
+---
+
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(DataVisualizations)
+```
 
 InspectDistances Inspection of Distance-Distribution
 
