--- a/DataVisualizations/Pixelmatrix.Rmd
+++ b/DataVisualizations/Pixelmatrix.Rmd
@@ -1,18 +1,30 @@
+---
+title: "``DataVisualizations::``"
+output: html_document
+---
+
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(DataVisualizations)
+```
 Pixelmatrix Plot of a Pixel Matrix
 #### Description
 Plots Data matrix as a pixel coulour image.
 #### Usage
+<pre><code>
 Pixelmatrix(Data, XNames = NULL, LowLim, HiLim,
             YNames = NULL, main = '',FillNotFiniteWithHighestValue=FALSE)
-46 Plot3D
+</code></pre>
 #### Arguments
 Data [1:n,1:d] Data cases in rows (n), variables in columns (d)
-LowLim Optional: limits for the color axis
-HiLim Optional: limits for the color axis
-XNames Optional: Vector - names for the X-ticks
-YNames Optional: Vector - names for the Y-ticks
+* LowLim Optional: limits for the color axis
+* HiLim Optional: limits for the color axis
+* XNames Optional: Vector - names for the X-ticks
+* YNames Optional: Vector - names for the Y-ticks
 main Optinal: String - Title of the plot
-FillNotFiniteWithHighestValue
+* FillNotFiniteWithHighestValue
 Optinal, Default FALSE = Non finite values are shown in black, TRUE=non
 finite values are transformed to a value higher than the highest value and shown
 in this color
@@ -20,49 +32,8 @@ Details
 Low values are shown in blue and green, middle values in yellow and high values in orange and red.
 Author(s)
 Michael Thrun, Felix Pape
-Examples
+
+##### Examples
 data("Lsun3D")
 Data=Lsun3D$Data
 Pixelmatrix(Data)
-Plot3D 3D plot of points
-#### Description
-A wrapper for Data with systematic clustering colors for either a 2D (x,y) or 3D (x,y,z) plot combined
-with a classification
-#### Usage
-Plot3D(Data,Cls,UniqueColors,size=2,na.rm=FALSE,...)
-Plot3D 47
-#### Arguments
-Data [1:n,1:d] matrix with either d=2 or d=3, if d>3 only the first 3 dimensions are
-taken
-Cls [1:n] numeric vector of the classification of data with k classes
-UniqueColors [1:k] character vector of colors, if not given DataVisualizations::DefaultColorSequence
-is used
-size size of points
-na.rm if na.rm=TRUE, then missing values are removed
-... further #### Arguments to be processed by plot3d or geom_point
-Details
-For geom_point only size and na.rm is available as further #### Arguments.
-Note
-Uses either geom_point for 2D or plot3d for 3D
-Author(s)
-Michael Thrun
-References
-RGL vignette in https://cran.r-project.org/package=rgl
-Spin3D in https://www.uni-marburg.de/fb12/arbeitsgruppen/datenbionik/software-en
-Examples
-#Spin3D similar output
-data(Lsun3D)
-Plot3D(Lsun3D$Data,Lsun3D$Cls,type='s',radius=0.1,box=FALSE,aspect=TRUE)
-rgl::grid3d(c("x", "y", "z"))
-#Projected Points with Classification
-Data=cbind(runif(500,min=-3,max=3),rnorm(500))
-# Classification
-Cls=ifelse(Data[,1]>0,1,2)
-Plot3D(Data,Cls,UniqueColors = DataVisualizations::DefaultColorSequence[c(1,3)],size=2)
-#Points with Non-Overlapping Labels
-#require(ggrepel)
-Data=cbind(runif(30,min=-1,max=1),rnorm(30,0,0.5))
-Names=paste0('VeryLongName',1:30)
-ggobj=Plot3D(Data)
-ggobj + geom_text_repel(aes(label=Names), size=3)
-48 PlotMissingvalues
