--- a/DataVisualizations/Heatmap.Rmd
+++ b/DataVisualizations/Heatmap.Rmd
@@ -1,3 +1,14 @@
+---
+title: "``DataVisualizations::Heatmap``"
+output: html_document
+---
+
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(DataVisualizations)
+```
 
 Heatmap Heatmap for Clustering
 
