--- a/DataVisualizations/Slopechart.Rmd
+++ b/DataVisualizations/Slopechart.Rmd
@@ -1,3 +1,15 @@
+---
+title: "``DataVisualizations::Slopechart``"
+output: html_document
+---
+
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(DataVisualizations)
+```
+
 Slopechart Slope Chart
 #### Description
 ABC analysis improved slope chart
