--- a/DataVisualizations/PlotMissingvalues.Rmd
+++ b/DataVisualizations/PlotMissingvalues.Rmd
@@ -1,3 +1,14 @@
+---
+title: "``DataVisualizations::``"
+output: html_document
+---
+
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(DataVisualizations)
+```
 PlotMissingvalues Plot of the Amount Of Missing Values
 #### Description
 Percentage of missing values per feature are visualized as a bar plot.
