--- a/DataVisualizations/classBoxplot.Rmd
+++ b/DataVisualizations/classBoxplot.Rmd
@@ -1,3 +1,14 @@
+---
+title: "``DataVisualizations::ClassBoxplot``"
+output: html_document
+---
+
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(DataVisualizations)
+```
 
 ClassBoxplot Creates Boxplot plot for all classes
 #### Description
