--- a/DataVisualizations/ClassMDplot.Rmd
+++ b/DataVisualizations/ClassMDplot.Rmd
@@ -1,3 +1,14 @@
+---
+title: "``DataVisualizations::``"
+output: html_document
+---
+
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(DataVisualizations)
+```
 ClassMDplot Class MD-plot for Data w.r.t. all classes
 
 #### Description
