--- a/DataVisualizations/PDEscatter.Rmd
+++ b/DataVisualizations/PDEscatter.Rmd
@@ -27,28 +27,41 @@ PDEscatter(x, y, na.rm = FALSE, paretoRadius = 0, sampleSize =
 * na.rm Function may not work with non finite values. If these cases should be automatically
 removed, set parameter TRUE
 * paretoRadius Numeric, the Pareto Radius. If omitted (or 0), calculate by paretoRad.
-sampleSize Numeric, maximum size of the sample used for calculation. High values increase
+* ``sampleSize`` Numeric, maximum size of the sample used for calculation. High values increase
 runtime significantly.
-* NrOfContourLines
+* ``NrOfContourLines``@
 Numeric, number of contour lines to be drawn. 20 by default.
 Plotter String, name of the plotting backend to use. Possible values are: "native", "ggplot",
 "plotly"
 DrawTopView Boolean, True means contur is drawn, otherwise a 3D plot is drawn. Default:
   True
-PDEscatter 43
-xlab String, title of the x axis. Default: "X", see plot() function
-ylab String, title of the y axis. Default: "Y", see plot() function
+
+* xlab String, title of the x axis. Default: "X", see plot() function
+* ylab String, title of the y axis. Default: "Y", see plot() function
 main string, the same as "main" in plot() function
-xlim see plot() function
-ylim see plot() function
-Legendlab_ggplot
-String, in case of Plotter="ggplot" label for the legend. Default: "value"
+* xlim see plot() function
+* ylim see plot() function
+* Legendlab_ggplot String, in case of Plotter="ggplot" label for the legend. Default: "value"
 
 #### Details
 
 The PDEscatter function generates the density of the xy data as a z coordinate. Afterwards xyz will be plotted either as a contour plot or a 3d plot. This function plots the PDE on top of a scatterplot.
 Variances of x and y should not differ by extreme numbers, otherwise calculate the percentiles on both first. The method was succesfully used in [Thrun, 2018; Thrun/Ultsch 2018].
-Value
+
+
+#### Examples
+```{r}
+#taken from [Thrun/Ultsch, 2018]
+data("ITS")
+data("MTY")
+Inds=which(ITS<900&MTY<8000)
+plot(ITS[Inds],MTY[Inds],main='Bimodality is not visible in normal scatter plot')
+PDEscatter(ITS[Inds],MTY[Inds],xlab = 'ITS in EUR',
+           ylab ='MTY in EUR' ,main='Pareto Density Estimation indicates Bimodality' )
+```
+
+
+#### Value
 List of:
   AnzInPSpheres Number of points within the ParetoRadius of each point
 ParetoRadius ParetoRadius used for PDEscatter
@@ -56,7 +69,8 @@ Handle Handle of the plot object. Information-string if native R plot is used.
 Note
 If DrawTopView=FALSE only the plotly option is currently available. If another option is chosen, the
 method switches automatically there.
-Author(s)
+
+#### Author(s)
 Felix Pape
 References
 [Thrun, 2018] Thrun, M. C.: Projection Based Clustering through Self-Organization and Swarm
@@ -69,12 +83,3 @@ Zelias International Conference on Modelling and Forecasting of Socio-Economic P
 [Ultsch, 2005] Ultsch, A.: Pareto density estimation: A density estimation for knowledge discovery,
 In Baier, D. & Werrnecke, K. D. (Eds.), Innovations in classification, data science, and information
 systems, (Vol. 27, pp. 91-100), Berlin, Germany, Springer, 2005.
-44 Piechart
-Examples
-#taken from [Thrun/Ultsch, 2018]
-data("ITS")
-data("MTY")
-Inds=which(ITS<900&MTY<8000)
-plot(ITS[Inds],MTY[Inds],main='Bimodality is not visible in normal scatter plot')
-PDEscatter(ITS[Inds],MTY[Inds],xlab = 'ITS in EUR',
-           ylab ='MTY in EUR' ,main='Pareto Density Estimation indicates Bimodality' )
