--- a/DataVisualizations/InspectBoxplots.Rmd
+++ b/DataVisualizations/InspectBoxplots.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(DataVisualizations)
 ```
 
-InspectBoxplots Enables to Insptecd the Boxplots for Multiple variables
+## ``InspectBoxplots``: Enables to Insptecd the Boxplots for Multiple variables
 
 #### Description
 
@@ -22,15 +22,10 @@ InspectBoxplots(Data, Names,Means=TRUE)
 </code></pre>
 
 #### Arguments
-* Data Matrix containing the data. Each column is one variable.
-* Names Optional: Names of the variables. If missing the columnnames of data are used.
-* Means Optional: TRUE: with mean, FALSE: Only median.
+* ``Data``: Matrix containing the data. Each column is one variable.
+* ``Names``: Optional: Names of the variables. If missing the columnnames of data are used.
+* ``Means``: Optional: TRUE: with mean, FALSE: Only median.
 
-#### Value
-The ggplot object of the boxplots
-
-#### Author(s)
-Felix Pape
 
 #### Examples
 
@@ -38,3 +33,8 @@ Felix Pape
 x <- cbind(A = rnorm(200, 1, 3), B = rnorm(100, -2, 5))
 InspectBoxplots(x)
 ```
+#### Value
+The ggplot object of the boxplots
+
+#### Author(s)
+Felix Pape
